<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_design"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:id="@+id/login_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SSE"
            android:textSize="60dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="-20dp"
            android:shadowColor="@color/gray"
            android:shadowRadius="5.0"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:text="Squre Step Exercise"
            android:shadowColor="@color/gray"
            android:shadowRadius="5.0"
            android:shadowDx="5.0"
            android:shadowDy="5.0"/>


    </LinearLayout>
    <android.support.v7.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"

        app:cardElevation="22dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:paddingTop="10dp"
                app:met_baseColor="@color/gray"
                app:met_primaryColor="@color/main"
                app:met_floatingLabel="highlight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingTop="10dp"
                app:met_baseColor="@color/gray"
                android:inputType="textPassword"
                app:met_primaryColor="@color/main"
                app:met_floatingLabel="highlight"  />

            <Button
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/register_button"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <Button
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="#eab20b"
                android:text="@string/login_kakao"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="#2C4388"
                android:text="@string/login_facebook"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>